gccida/g2/split_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48455:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48461:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48462:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v45 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48468:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v147, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48468:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v147, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48470:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v147; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48470:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v147; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48479:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1133( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48487:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v46, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48487:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v46, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48489:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v46; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48489:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v46; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48498:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1135( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48507:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x0[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48508:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48514:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v113; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48515:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_943( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48519:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v50 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48520:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48524:31: error: expected ')'
if ( !register_operand( ( rtx)v51, VOIDmode) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48524:23: note: to match this '('
if ( !register_operand( ( rtx)v51, VOIDmode) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/insn-recog.c:48526:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v51; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_1/src/obj/insn-recog.o] Error 1
